--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,16 @@
   <groupId>in.Ashokit</groupId>
   <artifactId>02-Maven-WebApp</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>25.0-SNAPSHOT</version>
   <name>02-Maven-WebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-core</artifactId>
+    <version>6.0.8</version>
+</dependency>
+	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
